--- a/home.html
+++ b/home.html
@@ -13,21 +13,21 @@
 
   <main class="product-list">
     <div class="product">
-      <img src="sweets_cookie.png" alt="クッキー" />
+      <img src="image/sweets_cookie.png" alt="クッキー" />
       <h2>クッキー</h2>
       <p>¥400</p>
       <button>カートに入れる</button>
     </div>
 
     <div class="product">
-      <img src="valentinesday_itachoco2.png" alt="チョコレート" />
+      <img src="image/valentinesday_itachoco2.png" alt="チョコレート" />
       <h2>チョコレート</h2>
       <p>¥400</p>
       <button>カートに入れる</button>
     </div>
 
     <div class="product">
-      <img src="candy.png" alt="キャンディー" />
+      <img src="image/candy.png" alt="キャンディー" />
       <h2>フルーツキャンディー</h2>
       <p>¥400</p>
       <button>カートに入れる</button>
