--- a/home.html
+++ b/home.html
@@ -9,6 +9,9 @@
 <body>
   <header>
     <h1>お菓子ショッピングサイト</h1>
+    <a href="cart.html" class="cart-link">
+    🛒 カート <span id="cart-count">0</span>
+    </a> 
   </header>
 
   <main class="product-list">
@@ -16,21 +19,21 @@
       <img src="image/sweets_cookie.png" alt="クッキー" />
       <h2>クッキー</h2>
       <p>¥400</p>
-      <button>カートに入れる</button>
+      <button onclick="addToCartAndGo()">カートに追加</button>
     </div>
 
     <div class="product">
       <img src="image/valentinesday_itachoco2.png" alt="チョコレート" />
       <h2>チョコレート</h2>
       <p>¥400</p>
-      <button>カートに入れる</button>
+      <button onclick="addToCartAndGo()">カートに追加</button>
     </div>
 
     <div class="product">
       <img src="image/candy.png" alt="キャンディー" />
       <h2>フルーツキャンディー</h2>
       <p>¥400</p>
-      <button>カートに入れる</button>
+      <button onclick="addToCartAndGo()">カートに追加</button>
     </div>
   </main>
 
