--- a/home.html
+++ b/home.html
@@ -2,44 +2,100 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>お菓子ショッピングサイト</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>お菓子ショップ</title>
+  <link rel="stylesheet" href="code/style.css" />
 </head>
-<body>
-  <header>
-    <h1>お菓子ショッピングサイト</h1>
-    <a href="cart.html" class="cart-link">
+<body>      
+
+<header>
+  <h1>お菓子ショップ</h1>
+  <a href="cart.html" class="cart-link">
     🛒 カート <span id="cart-count">0</span>
-    </a> 
-  </header>
+  </a> 
+  <script>
+    function updateCartCount() {
+      const cart = JSON.parse(localStorage.getItem("cart") || "[]");
+      const totalCount = cart.reduce((sum, item) => sum + item.quantity, 0);
+      document.getElementById("cart-count").textContent = totalCount;
+    }
+    window.addEventListener("DOMContentLoaded", updateCartCount);
+  </script>
+</header>
 
-  <main class="product-list">
-    <div class="product">
-      <img src="image/sweets_cookie.png" alt="クッキー" />
-      <h2>クッキー</h2>
-      <p>¥400</p>
-      <button onclick="addToCartAndGo()">カートに追加</button>
+##メイン商品
+<section class="main-product">
+  <h2>人気のお菓子</h2>
+
+  <div class="product-container">
+    <div class="product-card">
+      <img src="images/sweets_cookie.jpg" alt="クッキー" />
+      <p>クッキー - ¥400</p>
+      <button onclick="addToCartItem(1)">カートに追加</button>
     </div>
 
-    <div class="product">
-      <img src="image/valentinesday_itachoco2.png" alt="チョコレート" />
-      <h2>チョコレート</h2>
-      <p>¥400</p>
-      <button onclick="addToCartAndGo()">カートに追加</button>
+    <div class="product-card">
+      <img src="images/valentinesday_itachoco2.jpg" alt="チョコ" />
+      <p>チョコ - ¥400</p>
+      <button onclick="addToCartItem(2)">カートに追加</button>
     </div>
 
-    <div class="product">
-      <img src="image/candy.png" alt="キャンディー" />
-      <h2>フルーツキャンディー</h2>
-      <p>¥400</p>
-      <button onclick="addToCartAndGo()">カートに追加</button>
+    <div class="product-card">
+      <img src="images/candy.jpg" alt="キャンディー" />
+      <p>キャンディー - ¥400</p>
+      <button onclick="addToCartItem(3)">カートに追加</button>
     </div>
-  </main>
+  </div>
+</section>
 
-  <footer>
-    <p>&copy; 2025 お菓子ショッピングサイト</p>
-  </footer>
+<footer>
+  <p>&copy; 2025 お菓子ショップ</p>
+</footer>
+
+##カート処理
+<script>
+  const items = {
+    1: { id: 1, name: "クッキー", price: 400 },
+    2: { id: 2, name: "チョコ", price: 400 },
+    3: { id: 3, name: "キャンディー", price: 400 }
+  };
+
+  function addToCart(item) {
+    let cart = JSON.parse(localStorage.getItem("cart") || "[]");
+    const existingItem = cart.find(product => product.id === item.id);
+
+    if (existingItem) {
+      existingItem.quantity += 1;
+    } else {
+      cart.push({ ...item, quantity: 1 });
+    }
+
+    localStorage.setItem("cart", JSON.stringify(cart));
+    alert(`${item.name} をカートに追加しました！`);
+    updateCartCount();
+  }
+
+  function addToCartItem(id) {
+    addToCart(items[id]);
+  }
+
+  function updateCartCount() {
+    const cart = JSON.parse(localStorage.getItem("cart") || "[]");
+    const totalCount = cart.reduce((sum, item) => sum + item.quantity, 0);
+    const cartCountElem = document.getElementById("cart-count");
+    if (cartCountElem) {
+      cartCountElem.textContent = totalCount;
+    }
+  }
+
+  window.addEventListener("storage", (event) => {
+    if (event.key === "cart") {
+      updateCartCount();
+    }
+  });
+
+  window.addEventListener("DOMContentLoaded", updateCartCount);
+</script>
+
+<script src="track.js"></script>
 </body>
 </html>
-
