--- a/purchase.html
+++ b/purchase.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>購入確認ページ</title>
-  <link rel="stylesheet" href="code/cart.css" />
+  <link rel="stylesheet" href="newcode/cart.css" />
 </head>
 <body>
   <h1>🧾 購入内容の確認</h1>
