--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>お菓子ショップ</title>
-  <link rel="stylesheet" href="code/style.css" />
+  <link rel="stylesheet" href="newcode/style.css" />
 </head>
 <body>      
 
@@ -28,19 +28,19 @@
 
   <div class="product-container">
     <div class="product-card">
-      <img src="images/sweets_cookie.jpg" alt="クッキー" />
+      <img src="image/sweets_cookie.jpg" alt="クッキー" />
       <p>クッキー - ¥400</p>
       <button onclick="addToCartItem(1)">カートに追加</button>
     </div>
 
     <div class="product-card">
-      <img src="images/valentinesday_itachoco2.jpg" alt="チョコ" />
+      <img src="image/valentinesday_itachoco2.jpg" alt="チョコ" />
       <p>チョコ - ¥400</p>
       <button onclick="addToCartItem(2)">カートに追加</button>
     </div>
 
     <div class="product-card">
-      <img src="images/candy.jpg" alt="キャンディー" />
+      <img src="image/candy.jpg" alt="キャンディー" />
       <p>キャンディー - ¥400</p>
       <button onclick="addToCartItem(3)">カートに追加</button>
     </div>
