--- a/cart.html
+++ b/cart.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>カートページ</title>
-  <link rel="stylesheet" href="code/cart.css" />
+  <link rel="stylesheet" href="newcode/cart.css" />
 </head>
 <body>
   <h1>🛒 あなたのカート</h1>
