--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>お菓子ショップ</title>
-  <link rel="stylesheet" href="newcode/style.css" />
+  <link rel="stylesheet" href="/newcode/style.css" />
 </head>
 <body>      
 
