--- a/newcode/home.html
+++ b/newcode/home.html
@@ -22,25 +22,24 @@
   </script>
 </header>
 
-
 <section class="main-product">
   <h2>人気のお菓子</h2>
 
   <div class="product-container">
     <div class="product-card">
-      <img src="/image/sweets_cookie.jpg" alt="クッキー" />
+      <img src="../image/sweets_cookie.jpg" alt="クッキー" />
       <p>クッキー - ¥400</p>
       <button onclick="addToCartItem(1)">カートに追加</button>
     </div>
 
     <div class="product-card">
-      <img src="/image/valentinesday_itachoco2.jpg" alt="チョコ" />
+      <img src="../image/valentinesday_itachoco2.jpg" alt="チョコ" />
       <p>チョコ - ¥400</p>
       <button onclick="addToCartItem(2)">カートに追加</button>
     </div>
 
     <div class="product-card">
-      <img src="/image/candy.jpg" alt="キャンディー" />
+      <img src="../image/candy.jpg" alt="キャンディー" />
       <p>キャンディー - ¥400</p>
       <button onclick="addToCartItem(3)">カートに追加</button>
     </div>
@@ -50,7 +49,6 @@
 <footer>
   <p>&copy; 2025 お菓子ショップ</p>
 </footer>
-
 
 <script>
   const items = {
