--- a/newcode/home.html
+++ b/newcode/home.html
@@ -27,19 +27,19 @@
 
   <div class="product-container">
     <div class="product-card">
-      <img src="../image/sweets_cookie.jpg" alt="クッキー" />
+      <img src="../image/sweets_cookie.png" alt="クッキー" />
       <p>クッキー - ¥400</p>
       <button onclick="addToCartItem(1)">カートに追加</button>
     </div>
 
     <div class="product-card">
-      <img src="../image/valentinesday_itachoco2.jpg" alt="チョコ" />
+      <img src="../image/valentinesday_itachoco2.png" alt="チョコ" />
       <p>チョコ - ¥400</p>
       <button onclick="addToCartItem(2)">カートに追加</button>
     </div>
 
     <div class="product-card">
-      <img src="../image/candy.jpg" alt="キャンディー" />
+      <img src="../image/candy.png" alt="キャンディー" />
       <p>キャンディー - ¥400</p>
       <button onclick="addToCartItem(3)">カートに追加</button>
     </div>
