--- a/newcode/purchase.html
+++ b/newcode/purchase.html
@@ -24,7 +24,7 @@
   <button class="purchase-btn" onclick="completePurchase()">✅ この内容で購入する</button>
 
   <script>
-##初回アクセス記録
+//初回アクセス記録
     if (!localStorage.getItem("entryTime")) {
       localStorage.setItem("entryTime", new Date().toISOString());
     }
@@ -35,7 +35,7 @@
 
     let total = 0;
 
-##カート内容を表示
+//カート内容を表示
     cart.forEach(item => {
       const div = document.createElement("div");
       div.className = "cart-item";
