--- a/newcode/purchase.html
+++ b/newcode/purchase.html
@@ -91,7 +91,7 @@
         .then(response => {
           alert("購入が記録されました！ありがとうございました。");
           localStorage.clear();
-          location.href = "thanks.html";
+          location.href = "index.html";
         })
         .catch(error => {
           alert("送信に失敗しました");
