--- a/newcode/home.html
+++ b/newcode/home.html
@@ -23,7 +23,7 @@
 </header>
 
 <section class="main-product">
-  <h2>人気のお菓子</h2>
+  <h2>人気の商品</h2>
 
   <div class="product-container">
     <div class="product-card">
