--- a/newcode/cart.html
+++ b/newcode/cart.html
@@ -128,8 +128,8 @@
     // おすすめ商品
     // -------------------
     const recommendCandidates = [
-      {name:"グミ", price:100, img:"images/gumi.png"},
-      {name:"キャラメル", price:100, img:"images/caramel.png"},
+      {name:"グミ", price:100, img:"image/gumi.png"},
+      {name:"キャラメル", price:100, img:"image/caramel.png"},
     ];
 
     function renderRecommendations(){
