--- a/newcode/cart.html
+++ b/newcode/cart.html
@@ -128,9 +128,10 @@
     // おすすめ商品
     // -------------------
     const recommendCandidates = [
-      {name:"グミ", price:100, img:"image/gumi.png"},
-      {name:"キャラメル", price:100, img:"image/caramel.png"},
-    ];
+  {name:"グミ", price:100, img:"https://hana-0706.github.io/sweets/image/gumi.png"},
+  {name:"キャラメル", price:100, img:"https://hana-0706.github.io/sweets/image/caramel.png"},
+];
+
 
     function renderRecommendations(){
       const recDiv = document.getElementById("recommend-items");
