--- a/newcode/cart.html
+++ b/newcode/cart.html
@@ -27,7 +27,7 @@
   <div id="recommend-items" style="display:flex; gap:16px; flex-wrap:wrap;"></div>
 </div>
 
-
+<!-- 購入ボタン -->
   <button onclick="goToPurchase()" style="
     display: block;
     margin: 20px auto;
@@ -38,6 +38,8 @@
     border-radius: 8px;
     font-size: 16px;
     cursor: pointer;
+    position: relative;
+    z-index: 10;
   ">購入へすすむ →</button>
 
    <script>
