--- a/newcode/cart.html
+++ b/newcode/cart.html
@@ -110,9 +110,14 @@
     localStorage.setItem("pageHistory", JSON.stringify(pageHistory));
 
     // 毎回ランダムに A/B グループを決定
-    const abGroup = (Math.random() < 0.5) ? "A" : "B";
-    window.abGroup = abGroup; // 他の関数でも使える
-    console.log("Experiment group:", abGroup);
+    let abGroup = sessionStorage.getItem("abGroup");
+  　if (!abGroup) {
+    　abGroup = (Math.random() < 0.5) ? "A" : "B";
+  　　sessionStorage.setItem("abGroup", abGroup);
+　　}
+　　window.abGroup = abGroup;
+　　console.log("Experiment group:", abGroup);
+
 
     // 訪問ログ送信
     const visitParams = new URLSearchParams({
