--- a/newcode/purchase.html
+++ b/newcode/purchase.html
@@ -80,8 +80,8 @@
       const pathHistory = JSON.parse(localStorage.getItem("pageHistory") || "[]");
       const pathText = pathHistory.join(" → ");
 
-      const gasUrl = "https://script.google.com/macros/s/AKfycbxce3VnUPC9bMazNu-OfnKGbMZnprXs7MvSmIhDiNQOZle5qeFxyQtHY_y0hFD0yEzRyw/exec";
-
+      const gasUrl = "https://script.google.com/macros/s/AKfycbzFMy8XoOnNS-jgl_OWVsk-VlL1F9safbBj4BQAlCZZ0VNPMhzRD12-4DYByQj7SmXu1Q/exec"
+      
       const params = new URLSearchParams({
         action: "purchase",
         stay: stayMinutes,
@@ -119,7 +119,7 @@
     }
     localStorage.setItem("pageHistory", JSON.stringify(pageHistory));
 
-    const apiURL = "https://script.google.com/macros/s/AKfycbxce3VnUPC9bMazNu-OfnKGbMZnprXs7MvSmIhDiNQOZle5qeFxyQtHY_y0hFD0yEzRyw/exec";
+    const apiURL = "https://script.google.com/macros/s/AKfycbzFMy8XoOnNS-jgl_OWVsk-VlL1F9safbBj4BQAlCZZ0VNPMhzRD12-4DYByQj7SmXu1Q/exec";
     const params = new URLSearchParams({
       action: "visit",
       history: pageHistory.join(" → "),
