--- a/newcode/purchase.html
+++ b/newcode/purchase.html
@@ -88,6 +88,7 @@
         total: total,
         items: itemsSummary,
         name: userName,
+        group: group,
         history: pathText
       });
 
