--- a/newcode/purchase.html
+++ b/newcode/purchase.html
@@ -93,7 +93,9 @@
       });
 
       fetch(`${gasUrl}?${params.toString()}`)
+        .then(response => response.text())
         .then(response => {
+          console.log("サーバー応答:", data);
           alert("購入が記録されました！ありがとうございました。");
           localStorage.clear();
           location.href = "index.html";
