--- a/newcode/cart.html
+++ b/newcode/cart.html
@@ -43,6 +43,9 @@
   ">購入へすすむ →</button>
 
    <script>
+     let group = sessionStorage.getItem("abGroup") || "A";
+  console.log("Experiment group (on purchase page):", group);
+     
     const apiURL = "https://script.google.com/macros/s/AKfycbzFMy8XoOnNS-jgl_OWVsk-VlL1F9safbBj4BQAlCZZ0VNPMhzRD12-4DYByQj7SmXu1Q/exec";
 
 
