--- a/newcode/cart.html
+++ b/newcode/cart.html
@@ -43,12 +43,8 @@
   ">購入へすすむ →</button>
 
    <script>
-     let abGroup = sessionStorage.getItem("abGroup");
-     if(!abGroup){
-       abGroup = (Math.random() < 0.5) ? "A" : "B";
-       sessionStorage.setItem("abGroup" , abGroup);
-     }
-     console.log("Experiment group (on purchase page):", sbGroup);
+     let group = sessionStorage.getItem("abGroup")||"A";
+     console.log("Experiment group (on purchase page):", group);
      
     const apiURL = "https://script.google.com/macros/s/AKfycbzFMy8XoOnNS-jgl_OWVsk-VlL1F9safbBj4BQAlCZZ0VNPMhzRD12-4DYByQj7SmXu1Q/exec";
 
