--- a/newcode/cart.html
+++ b/newcode/cart.html
@@ -43,12 +43,9 @@
   ">購入へすすむ →</button>
 
    <script>
-     let group = sessionStorage.getItem("group");
-     if(!group){
-       group = (Math.random() < 0.5) ? "A" : "B";
-      sessionStorage.setItem("group", group);
-     }
-     console.log("Experiment group:", group);
+　　let group = sessionStorage.getItem("group") || "A"; 
+　　console.log("Experiment group (this page):", group);
+　　</script>
      
     const apiURL = "https://script.google.com/macros/s/AKfycbzFMy8XoOnNS-jgl_OWVsk-VlL1F9safbBj4BQAlCZZ0VNPMhzRD12-4DYByQj7SmXu1Q/exec";
 
