--- a/newcode/cart.html
+++ b/newcode/cart.html
@@ -167,14 +167,19 @@
 
   
   // 購入ボタン
-  
+  <script>
     function goToPurchase() {
+      const cart = JSON.parse(localStorage.getItem("cart") || "[]");
       const totalPrice = cart.reduce((sum, item)=>sum+item.price*item.quantity,0);
       const stayMinutes = Math.round((Date.now() - window.startTime)/60000);
-      const userName = localStorage.getItem("userName") || "未入力";
-      const itemsSummary = cart.map(item => `${item.name}x${item.quantity}`).join(", ");
       
-      const purchaseParams = new URLSearchParams({
+      const userName = localStorage.getItem("userName") || "未入力";  
+      const itemsSummary = cart.map(item => `${item.name}x${item.quantity}`).join(", ");
+
+      const pageHistory = JSON.parse(localStorage.getItem("pageHistory") || "[]");
+  
+      const apiURL = "https://script.google.com/macros/s/AKfycbzFMy8XoOnNS-jgl_OWVsk-VlL1F9safbBj4BQAlCZZ0VNPMhzRD12-4DYByQj7SmXu1Q/exec"; 
+      const params = new URLSearchParams({
         action: "purchase",
         name: userName,
         stay: stayMinutes,
