--- a/newcode/purchase.html
+++ b/newcode/purchase.html
@@ -111,6 +111,8 @@
           isSending = false;
         });
     }
+
+   document.querySelector('.purchase-btn').addEventListener("click", completePurchase);
   </script>
 
 
