--- a/newcode/cart.html
+++ b/newcode/cart.html
@@ -161,11 +161,13 @@ function renderRecommendations(){
     }
 
   // Bグループのみ表示
-    if(abGroup === "B"){
+    if(group === "B"){
       renderRecommendations();
-    }
-
-  
+      sessionStorage.setItem("group", "B");
+    }else {
+      sessionStorage.setItem("group", "A");
+}
+        
   //ページ遷移
     function goToPurchase() {
       window.location.href = "purchase.html";
