--- a/newcode/cart.html
+++ b/newcode/cart.html
@@ -43,7 +43,7 @@
   ">購入へすすむ →</button>
 
    <script>
-　　let group = sessionStorage.getItem("group") || "A"; 
+　　let group = sessionStorage.getItem("group"); 
 　　console.log("Experiment group (this page):", group);
 　　
      
