--- a/newcode/cart.html
+++ b/newcode/cart.html
@@ -43,6 +43,7 @@
   ">購入へすすむ →</button>
 
    <script>
+//グループ呼び出し
 　　let group = sessionStorage.getItem("group"); 
 　　console.log("Experiment group (this page):", group);
 　　
