--- a/newcode/index.html
+++ b/newcode/index.html
@@ -52,10 +52,10 @@
 
 <script>
 // グループ分け
-let group = sessionStorage.getItem("group");
+let group = localStorage.getItem("group");
 if (!group) {
   group = (Math.random() < 0.5) ? "A" : "B";
-  sessionStorage.setItem("group", group);
+  localStorage.setItem("group", group);
 }
 console.log("Experiment group (index page):", group);
 </script>
