--- a/newcode/cart.html
+++ b/newcode/cart.html
@@ -44,7 +44,7 @@
 
    <script>
 //グループ呼び出し
-　　let group = sessionStorage.getItem("group"); 
+　　let group = localStorage.getItem("group"); 
 　　console.log("Experiment group (this page):", group);
 　　
      
