--- a/newcode/purchase.html
+++ b/newcode/purchase.html
@@ -24,7 +24,7 @@
   <button class="purchase-btn" onclick="completePurchase()">✅ この内容で購入する</button>
 
  <script>
-　let group = sessionStorage.getItem("group") || "A"; 
+　let group = localStorage.getItem("group") || "A"; 
 　console.log("Experiment group (this page):", group);
   
 //初回アクセス記録
