--- a/newcode/index.html
+++ b/newcode/index.html
@@ -45,34 +45,24 @@
             }
             
             localStorage.setItem("userName", name);
-            location.href = "home.html"; // 入力後にトップページなどへ遷移
+
+            //グループ分け
+            let hasLoggedIn = localStorage.getItem("hasLoggedIn");
+            let group;
+
+            if (!hasLoggedIn) {
+              group = (Math.random() < 0.5) ? "A" : "B"; // ランダム分け
+              localStorage.setItem("group", group);
+              localStorage.setItem("hasLoggedIn", "true");
+              console.log("初回ログイン → グループを分け:", group);
+            } else {
+              group = localStorage.getItem("group");
+              console.log("2回目以降のログイン → 既存グループ:", group);
+            }
+
+            // 入力後に遷移
+            location.href = "home.html"; 
         }
-
-    </script>
-
-<script>
-// グループ分け
-
-function onLogin() {
-    //初回ログインか確認
-    let hasLoggedIn = localStorage.getItem("hasLoggedIn");
-
-    //初回ログイン
-    if (!hasLoggedIn) {
-        //A/Bをランダム分け
-        let group = (Math.random() < 0.5) ? "A" : "B";
-        localStorage.setItem("group", group);
-        
-    //フラグを立てる　２回目以降は飛ばす
-    localStorage.setItem("hasLoggedIn", "true");
-
-    console.log(" 初回ログイン → グループを分け:", group);
-  } else {
-    // すでにグループ分けされている場合はそれを維持
-    let group = localStorage.getItem("group");
-    console.log(" 2回目以降のログイン → 既存グループ:", group);
-  }
-}
 </script>
 
 
