--- a/newcode/index.html
+++ b/newcode/index.html
@@ -54,7 +54,7 @@
               group = (Math.random() < 0.5) ? "A" : "B"; // ランダム分け
               localStorage.setItem("group", group);
               localStorage.setItem("hasLoggedIn", "true");
-              console.log("初回ログイン → グループを分け:", group);
+              console.log("初回ログイン → グループ分け:", group);
             } else {
               group = localStorage.getItem("group");
               console.log("2回目以降のログイン → 既存グループ:", group);
