--- a/newcode/purchase.html
+++ b/newcode/purchase.html
@@ -104,7 +104,7 @@
           //グループリセット
           localStorage.removeItem("group");
           localStorage.removeItem("hasLoggedIn");
-          console.log("購入完了"→ 次回訪問でグループを再割り振り"); 
+          console.log("購入完了 → 次回訪問でグループを再割り振り"); 
 
           localStorage.removeItem("cart");
           localStorage.removeItem("pageHistory");
