--- a/newcode/home.html
+++ b/newcode/home.html
@@ -43,6 +43,18 @@
       <p>キャンディー - ¥100</p>
       <button onclick="addToCartItem(3)">カートに追加</button>
     </div>
+
+    </div>
+      <img src="../image/candy.png" alt="グミ" />
+      <p>グミ - ¥100</p>
+      <button onclick="addToCartItem(4)">カートに追加</button>
+    </div>
+
+  　<div class="product-card">
+      <img src="../image/candy.png" alt="キャラメル" />
+      <p>キャラメル - ¥100</p>
+      <button onclick="addToCartItem(5)">カートに追加</button>
+    </div>
   </div>
 </section>
 
