--- a/newcode/home.html
+++ b/newcode/home.html
@@ -45,7 +45,7 @@
     </div>
 
     </div>
-      <img src="../image/candy.png" alt="グミ" />
+      <img src="https://hana-0706.github.io/sweets/image/gumi.png" alt="グミ" />
       <p>グミ - ¥100</p>
       <button onclick="addToCartItem(4)">カートに追加</button>
     </div>
