--- a/newcode/home.html
+++ b/newcode/home.html
@@ -51,7 +51,7 @@
     </div>
 
   　<div class="product-card">
-      <img src="../image/candy.png" alt="キャラメル" />
+      <img src="https://hana-0706.github.io/sweets/image/caramel.png" alt="キャラメル" />
       <p>キャラメル - ¥100</p>
       <button onclick="addToCartItem(5)">カートに追加</button>
     </div>
