--- a/newcode/home.html
+++ b/newcode/home.html
@@ -44,7 +44,7 @@
       <button onclick="addToCartItem(3)">カートに追加</button>
     </div>
 
-    </div>
+    <div class="product-card">
       <img src="https://hana-0706.github.io/sweets/image/gumi.png" alt="グミ" />
       <p>グミ - ¥100</p>
       <button onclick="addToCartItem(4)">カートに追加</button>
@@ -67,6 +67,8 @@
     1: { id: 1, name: "クッキー", price: 100 },
     2: { id: 2, name: "チョコ", price: 100 },
     3: { id: 3, name: "キャンディー", price: 100 }
+    4: { id: 4, name: "グミ", price: 100 }
+  　5: { id: 5, name: "キャラメル", price: 100 }
   };
 
   function addToCart(item) {
