--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>リダイレクト中...</title>
-  <meta http-equiv="refresh" content="0;url=newcode/index.html">
+  <meta http-equiv="refresh" content="0;url=newcode/login.html">
 </head>
 <body>
   <p>ログイン画面に移動しています。<br />
