--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <p>ログイン画面に移動しています。<br />
-  自動で切り替わらない場合は <a href="newcode/index.html">こちら</a> をクリックしてください。</p>
+  自動で切り替わらない場合は <a href="newcode/login.html">こちら</a> をクリックしてください。</p>
 </body>
 </html>
