--- a/newcode/purchase.html
+++ b/newcode/purchase.html
@@ -71,7 +71,7 @@
         btn.disabled = false;
         btn.textContent = "✅ この内容で購入する";
         isSending = false;
-        location.href = "login.html";
+        location.href = "../login.html";
         return;
       }
 
