--- a/newcode/purchase.html
+++ b/newcode/purchase.html
@@ -110,7 +110,7 @@
           localStorage.removeItem("pageHistory");
           localStorage.removeItem("entryTime");
 
-          location.href = "index.html";
+          location.href = "../index.html";
         })
         .catch(error => {
           alert("送信に失敗しました");
