--- a/newcode/purchase.html
+++ b/newcode/purchase.html
@@ -71,7 +71,7 @@
         btn.disabled = false;
         btn.textContent = "✅ この内容で購入する";
         isSending = false;
-        location.href = "../index.html";
+        location.href = "index.html";
         return;
       }
 
@@ -110,7 +110,7 @@
           localStorage.removeItem("pageHistory");
           localStorage.removeItem("entryTime");
 
-          location.href = "../index.html";
+          location.href = "index.html";
         })
         .catch(error => {
           alert("送信に失敗しました");
