--- a/newcode/index.html
+++ b/newcode/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <title>リダイレクト中...</title>
-  <meta http-equiv="refresh" content="0;url=newcode/login.html">
+  <meta http-equiv="refresh" content="0;url=login.html">
 </head>
 <body>
   <p>ログイン画面に移動しています。<br />
-  自動で切り替わらない場合は <a href="newcode/login.html">こちら</a> をクリックしてください。</p>
+  自動で切り替わらない場合は <a href="login.html">こちら</a> をクリックしてください。</p>
 </body>
 </html>
