--- a/newcode/home.html
+++ b/newcode/home.html
@@ -66,8 +66,8 @@
   const items = {
     1: { id: 1, name: "クッキー", price: 100 },
     2: { id: 2, name: "チョコ", price: 100 },
-    3: { id: 3, name: "キャンディー", price: 100 }
-    4: { id: 4, name: "グミ", price: 100 }
+    3: { id: 3, name: "キャンディー", price: 100 },
+    4: { id: 4, name: "グミ", price: 100 },
   　5: { id: 5, name: "キャラメル", price: 100 }
   };
 
