--- a/newcode/home.html
+++ b/newcode/home.html
@@ -27,32 +27,32 @@
 
   <div class="product-container">
     <div class="product-card">
-      <img src="../image/sweets_cookie.png" alt="クッキー" />
-      <p>クッキー - ¥100</p>
+      <img src="../image/たべっこ.jpg" alt="ビスケット" />
+      <p>ビスケット - ¥100</p>
       <button onclick="addToCartItem(1)">カートに追加</button>
     </div>
 
     <div class="product-card">
-      <img src="../image/valentinesday_itachoco2.png" alt="チョコ" />
+      <img src="../image/チョコ.jpg" alt="チョコ" />
       <p>チョコ - ¥100</p>
       <button onclick="addToCartItem(2)">カートに追加</button>
     </div>
 
     <div class="product-card">
-      <img src="../image/candy.png" alt="キャンディー" />
-      <p>キャンディー - ¥100</p>
+      <img src="../image/プチ.jpg" alt="ポテチ" />
+      <p>ポテチ - ¥100</p>
       <button onclick="addToCartItem(3)">カートに追加</button>
     </div>
 
     <div class="product-card">
-      <img src="https://hana-0706.github.io/sweets/image/gumi.png" alt="グミ" />
+      <img src="../image/グミ.jpg" alt="グミ" />
       <p>グミ - ¥100</p>
       <button onclick="addToCartItem(4)">カートに追加</button>
     </div>
 
   　<div class="product-card">
-      <img src="https://hana-0706.github.io/sweets/image/caramel.png" alt="キャラメル" />
-      <p>キャラメル - ¥100</p>
+      <img src="../image/じゃがりこ" alt="じゃがりこ" />
+      <p>じゃがりこ - ¥100</p>
       <button onclick="addToCartItem(5)">カートに追加</button>
     </div>
   </div>
@@ -64,11 +64,11 @@
 
 <script>
   const items = {
-    1: { id: 1, name: "クッキー", price: 100 },
+    1: { id: 1, name: "ビスケット", price: 100 },
     2: { id: 2, name: "チョコ", price: 100 },
-    3: { id: 3, name: "キャンディー", price: 100 },
+    3: { id: 3, name: "ポテチ", price: 100 },
     4: { id: 4, name: "グミ", price: 100 },
-    5: { id: 5, name: "キャラメル", price: 100 }
+    5: { id: 5, name: "じゃがりこ", price: 100 }
   };
 
   function addToCart(item) {
