--- a/newcode/cart.html
+++ b/newcode/cart.html
@@ -133,8 +133,8 @@ const visitParams = new URLSearchParams({
 // おすすめ商品
     
 const recommendCandidates = [
-  {name:"グミ", price:100, img:"https://hana-0706.github.io/sweets/image/gumi.png"},
-  {name:"キャラメル", price:100, img:"https://hana-0706.github.io/sweets/image/caramel.png"},
+  {name:"じゃがりこ", price:100, img:"../image/じゃがりこ.jpg"},
+  {name:"ビスケット", price:100, img:"../image/ビスケット.jpg"},
 ];
 
 
