--- a/newcode/home.html
+++ b/newcode/home.html
@@ -51,7 +51,7 @@
     </div>
 
   　<div class="product-card">
-      <img src="../image/じゃがりこ" alt="じゃがりこ" />
+      <img src="../image/じゃがりこ.jpg" alt="じゃがりこ" />
       <p>じゃがりこ - ¥100</p>
       <button onclick="addToCartItem(5)">カートに追加</button>
     </div>
