--- a/newcode/cart.html
+++ b/newcode/cart.html
@@ -134,7 +134,7 @@ const visitParams = new URLSearchParams({
     
 const recommendCandidates = [
   {name:"じゃがりこ", price:100, img:"../image/じゃがりこ.jpg"},
-  {name:"ビスケット", price:100, img:"../image/ビスケット.jpg"},
+  {name:"ビスケット", price:100, img:"../image/たべっこ.jpg"},
 ];
 
 
