--- a/newcode/home.html
+++ b/newcode/home.html
@@ -39,8 +39,8 @@
     </div>
 
     <div class="product-card">
-      <img src="../image/プチ.jpg" alt="ポテチ" />
-      <p>ポテチ - ¥100</p>
+      <img src="../image/プチ.jpg" alt="プチ" />
+      <p>プチ - ¥100</p>
       <button onclick="addToCartItem(3)">カートに追加</button>
     </div>
 
@@ -66,7 +66,7 @@
   const items = {
     1: { id: 1, name: "ビスケット", price: 100 },
     2: { id: 2, name: "チョコ", price: 100 },
-    3: { id: 3, name: "ポテチ", price: 100 },
+    3: { id: 3, name: "プチ", price: 100 },
     4: { id: 4, name: "グミ", price: 100 },
     5: { id: 5, name: "じゃがりこ", price: 100 }
   };
